# edinet-explorer

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
edinet-explorer/: data_processor.py  explorer_gui.py  main.py
edinet_explorer/: data_processor.py  explorer_gui.py
src/edinet_explorer/: __init__.py  __main__.py  data_processor.py  explorer_gui.py
